# The-Password-Manager-that-works-Silent-Key

./: CONTRIBUTING.md  CORPORATE LICENSE.md  Enterprise License Agreement (ELA).md  LICENSE.md  README.md  pyproject.toml
.github/: FUNDING.yml
CodeBase/: main.py
CodeBase/Database/: Database_Setup.py
CodeBase/GraphicLayout/: Window.py
