[tool.poetry]
name = "silent key"
version = "0.1.0"
description = "This is to manage the dependcy of the Silent Key"
authors = ["Shashwat Acharya <shashwatacharya1@gmail.com>","Subham Raul <srmusics16@gmail.com>"]
license = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.12"
PyQt6 = "^6.7.1"
mkdocs = "^1.6.1"
pydantic = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
